[package]
name = "cc2640r2f-hal"
version = "0.0.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[dependencies]

[dependencies.embedded-hal]
version = "*"
features = ["unproven"]

[dependencies.cc2640r2f]
version = "*"
git = "https://github.com/luojia65/cc2640r2f"

[dev-dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
